<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageSearch">

    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/image" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/date_image"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/image"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textAlignment="center"
        android:layout_below="@id/date_image" />

    <TextView
        android:id="@+id/hd_url"
        android:textSize="20sp"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/url" />

    <Button
        android:id="@+id/save_button"
        android:layout_below="@id/hd_url"
        android:layout_centerInParent="true"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saved_images_button"
        android:layout_marginTop="30dp"
        android:text="@string/gotoS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/save_button" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/saved_images_button"
        android:layout_height="70dp"
        android:visibility="invisible" />

</RelativeLayout>